adding tests to AzureResponsesAsyncTest file